--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "drizzle-orm": "^0.44.2",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.16.0",
+    "groq-sdk": "^0.23.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
