--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@shikijs/transformers": "^1.29.2",
     "@types/pg": "^8.15.4",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -59,6 +60,7 @@
     "groq-sdk": "^0.23.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "marked": "^12.0.2",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "openai": "^5.1.1",
@@ -70,6 +72,7 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "shiki": "^1.29.2",
     "sonner": "^1.7.1",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.6.0",
