--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "marked": "^12.0.2",
+    "nanoid": "^5.1.5",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "openai": "^5.1.1",
