--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.44.2",
     "embla-carousel-react": "8.5.1",
+    "file-type": "^21.0.0",
     "framer-motion": "^12.16.0",
     "groq-sdk": "^0.23.0",
+    "ibm-cos-sdk": "^1.14.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "marked": "^12.0.2",
@@ -65,14 +67,18 @@
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "openai": "^5.1.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.16.0",
     "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-image-gallery": "^1.4.0",
+    "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "sharp": "^0.34.2",
     "shiki": "^1.29.2",
     "sonner": "^1.7.1",
     "svix": "^1.15.0",
@@ -83,6 +89,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "postcss": "^8.5",
