--- a/package.json
+++ b/package.json
@@ -64,15 +64,15 @@
     "lucide-react": "^0.454.0",
     "marked": "^12.0.2",
     "nanoid": "^5.1.5",
-    "next": "14.2.16",
+    "next": "^15.3.3",
     "next-themes": "^0.4.4",
     "openai": "^5.1.1",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.0",
     "postgres": "^3.4.7",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.1",
     "react-image-gallery": "^1.4.0",
     "react-pdf": "^9.2.1",
@@ -90,8 +90,8 @@
   "devDependencies": {
     "@types/node": "^22",
     "@types/pdf-parse": "^1.1.5",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.7.1",
