--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run db:migrate && next build",
+    "postbuild": "echo 'Build completed successfully'",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
