--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "replicate": "^1.0.1",
     "sharp": "^0.34.2",
     "shiki": "^1.29.2",
     "sonner": "^1.7.1",
