Add ModelQuickGuide component for enhanced model selection experience. Integrate model tips and usage recommendations to assist users in choosing the appropriate AI model. Update ChatHeader to include the new guide and adjust ModelSelector for improved model persistence and selection logic. Enhance overall user experience by providing contextual information and visual cues for model capabilities, aligning with the project's goal of delivering a rich, interactive chat experience.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/is-prop-valid": "latest",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.1",
+    "@icons-pack/react-simple-icons": "^13.1.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
