Enhance performance optimizations and development experience. Update .gitignore to include additional cache and OS files. Revise next.config.mjs for improved build performance and external package handling. Introduce new performance monitoring documentation in PERFORMANCE.md, detailing immediate and additional optimizations. Update package.json scripts for better memory management and build analysis. This update aligns with the project's goal of delivering a responsive and efficient chat application.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,20 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# performance optimization caches
+node_modules/.cache/
+.swc/
+.webpack/
+.turbo/
+.cache/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
