--- a/package.json
+++ b/package.json
@@ -3,17 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--max-old-space-size=8192 --no-deprecation' next dev",
+    "dev:fast": "NODE_OPTIONS='--max-old-space-size=8192 --no-deprecation' NEXT_TELEMETRY_DISABLED=1 next dev --turbo --port 3000",
+    "dev:turbo": "NODE_OPTIONS='--max-old-space-size=8192 --no-deprecation' NEXT_TELEMETRY_DISABLED=1 next dev --turbo",
+    "dev:debug": "NODE_OPTIONS='--inspect --max-old-space-size=8192' next dev",
     "build": "npm run db:migrate && next build",
+    "build:analyze": "ANALYZE=true npm run build",
     "postbuild": "echo 'Build completed successfully'",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:byok": "vitest run test/lib/ai/providers test/lib/utils/encryption.test.ts test/app/api/user/api-keys.test.ts",
     "test:validate": "tsx test/run-tests.ts",
+    "clean": "rm -rf .next && rm -rf node_modules/.cache",
+    "clean:all": "rm -rf .next && rm -rf node_modules && npm install",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
