--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "openai": "^5.1.1",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.0",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "postgres": "^3.4.7",
     "react": "^19.1.0",
     "react-day-picker": "8.10.1",
