--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.44.2",
     "embla-carousel-react": "8.5.1",
@@ -89,7 +89,7 @@
     "pino-pretty": "^13.0.0",
     "postgres": "^3.4.7",
     "react": "^19.1.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.1",
     "react-image-gallery": "^1.4.0",
