--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:fast": "NODE_OPTIONS='--max-old-space-size=8192 --no-deprecation' NEXT_TELEMETRY_DISABLED=1 next dev --turbo --port 3000",
     "dev:turbo": "NODE_OPTIONS='--max-old-space-size=8192 --no-deprecation' NEXT_TELEMETRY_DISABLED=1 next dev --turbo",
     "dev:debug": "NODE_OPTIONS='--inspect --max-old-space-size=8192' next dev",
-    "build": "npm run db:migrate && next build",
+    "build": "next build",
+    "build:with-migrate": "npm run db:migrate && next build",
     "build:analyze": "ANALYZE=true npm run build",
     "postbuild": "echo 'Build completed successfully'",
     "start": "next start",
@@ -103,7 +104,7 @@
     "svix": "^1.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
+    "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
