Enhance build and migration processes by adding custom migration script and updating package.json scripts. Introduced a new `db:migrate:custom` command for tailored migrations and updated Vercel configuration for optimized deployment. This update improves the project's database management and deployment efficiency, aligning with the goal of maintaining a modern and efficient chat application.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev:fast": "NODE_OPTIONS='--max-old-space-size=8192 --no-deprecation' NEXT_TELEMETRY_DISABLED=1 next dev --turbo --port 3000",
     "dev:turbo": "NODE_OPTIONS='--max-old-space-size=8192 --no-deprecation' NEXT_TELEMETRY_DISABLED=1 next dev --turbo",
     "dev:debug": "NODE_OPTIONS='--inspect --max-old-space-size=8192' next dev",
+    "prebuild": "npm run db:migrate:custom",
     "build": "next build",
-    "build:with-migrate": "npm run db:migrate && next build",
+    "build:with-migrate": "npm run db:migrate:custom && next build",
     "build:analyze": "ANALYZE=true npm run build",
+    "build:vercel": "npm install --include=optional && npm run db:migrate:custom && next build",
     "postbuild": "echo 'Build completed successfully'",
     "start": "next start",
     "lint": "next lint",
@@ -25,6 +27,7 @@
     "clean:all": "rm -rf .next && rm -rf node_modules && npm install",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "db:migrate:custom": "tsx scripts/migrate.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx lib/db/seed.ts"
