Add PWA support and configuration - Implemented Progressive Web App (PWA) features including service worker registration, manifest file, and install prompt. Updated Next.js configuration for PWA compatibility and added necessary icons for enhanced user experience. This enhances the app's accessibility and offline capabilities, aligning with the goal of providing a modern chat application.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "build:with-migrate": "npm run db:migrate:custom && next build",
     "build:analyze": "ANALYZE=true npm run build",
     "build:vercel": "npm install --include=optional && npm run db:migrate:custom && next build",
+    "build:pwa": "npm run build && npm run pwa:generate-icons",
+    "pwa:generate-icons": "node scripts/generate-icons.js",
+    "build:capacitor": "next build && next export && npx cap sync",
+    "cap:ios": "npx cap open ios",
+    "cap:android": "npx cap open android",
+    "cap:sync": "npx cap sync",
     "postbuild": "echo 'Build completed successfully'",
     "start": "next start",
     "lint": "next lint",
@@ -35,6 +41,10 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.53.0",
+    "@capacitor/android": "^7.3.0",
+    "@capacitor/cli": "^7.3.0",
+    "@capacitor/core": "^7.3.0",
+    "@capacitor/ios": "^7.3.0",
     "@clerk/nextjs": "^6.21.0",
     "@emotion/is-prop-valid": "latest",
     "@google/generative-ai": "^0.24.1",
@@ -86,6 +96,7 @@
     "marked": "^12.0.2",
     "nanoid": "^5.1.5",
     "next": "^15.3.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "openai": "^5.1.1",
     "pdf-parse": "^1.1.1",
@@ -111,6 +122,7 @@
     "tsx": "^4.7.1",
     "typescript": "^5",
     "vaul": "^1.1.2",
+    "workbox-webpack-plugin": "^7.3.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
