--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "db:migrate:custom": "tsx scripts/migrate.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "tsx lib/db/seed.ts"
+    "db:seed": "tsx lib/db/seed.ts",
+    "db:cleanup-errors": "tsx scripts/cleanup-error-messages.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.53.0",
