Update dependencies and refactor message rendering in chat components - Added support for syntax highlighting and markdown rendering by integrating react-syntax-highlighter and react-markdown. Removed legacy code for code blocks and markdown processing, streamlining the MessageContent component for improved performance and maintainability. Enhanced the ThinkingBlock component to utilize the new MessageContent for consistent message display.

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@shikijs/transformers": "^1.29.2",
     "@types/pg": "^8.15.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -110,9 +111,13 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.1",
     "react-image-gallery": "^1.4.0",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.7",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "2.15.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "replicate": "^1.0.1",
     "sharp": "^0.34.2",
     "shiki": "^1.29.2",
